<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.quizapp.MainActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:background="@color/material_grey_300"
                android:gravity="center"
                android:text="@string/question3"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioButton2"
                    android:layout_margin="20dp"
                    android:layout_toLeftOf="@+id/btn_next"
                    android:layout_toStartOf="@+id/btn_next"
                    android:checked="false"
                    android:text="@string/ans31"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioButton2"
                    android:layout_alignStart="@+id/radioButton2"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:checked="false"
                    android:text="@string/ans32"
                    android:textSize="20sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/scrollView4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_icon2"
                android:text="@string/next"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
