<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.quizapp.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginTop="20dp"
                android:background="@drawable/iphone_icon" />

            <Button
                android:id="@+id/btn_phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_icon2"
                android:onClick="OnClick"
                android:text="@string/ans1"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_iphone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_phone"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_icon2"
                android:onClick="OnClick"
                android:text="@string/ans2"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
