<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.quizapp.MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:textSize="20sp"
                android:clickable="true"
                android:text="@string/question2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_next"
                android:layout_below="@+id/textView"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center_vertical"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/checkBox2"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/checkBox"
                        android:layout_toRightOf="@+id/checkBox"
                        android:text="@string/ans21"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignLeft="@+id/checkBox"
                        android:layout_alignStart="@+id/checkBox"
                        android:layout_below="@+id/checkBox"
                        android:layout_gravity="center_vertical"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView2"
                        android:layout_alignStart="@+id/textView2"
                        android:layout_alignTop="@+id/checkBox2"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:text="@string/ans22"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignLeft="@+id/checkBox2"
                        android:layout_alignStart="@+id/checkBox2"
                        android:layout_below="@+id/checkBox2"
                        android:layout_gravity="center_vertical"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_alignTop="@+id/checkBox3"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:text="@string/ans23"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/btn_icon2"
                android:text="@string/next"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
